# speed-oriented-quantum-circuit-backend

./: .clang-format  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  Dockerfile  Makefile  QPU.h  README.md  build_preprocessor.py  main.c  pyproject.toml  pytest.ini  setup.py
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.3-MILESTONE-AUDIT.md  v5.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.4-MILESTONE-AUDIT.md  v1.4-REQUIREMENTS.md  v1.4-ROADMAP.md  v1.5-MILESTONE-AUDIT.md  v1.5-REQUIREMENTS.md  v1.5-ROADMAP.md  v1.6-MILESTONE-AUDIT.md  v1.6-REQUIREMENTS.md  v1.6-ROADMAP.md  v1.7-REQUIREMENTS.md  v1.7-ROADMAP.md  v1.8-MILESTONE-AUDIT.md  v1.8-REQUIREMENTS.md  v1.8-ROADMAP.md  v1.9-MILESTONE-AUDIT.md  v1.9-REQUIREMENTS.md  v1.9-ROADMAP.md  v2.0-MILESTONE-AUDIT.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v2.1-MILESTONE-AUDIT.md  v2.1-REQUIREMENTS.md  v2.1-ROADMAP.md  v2.3-REQUIREMENTS.md  v2.3-ROADMAP.md  v3.0-REQUIREMENTS.md  v3.0-ROADMAP.md  v4.1-REQUIREMENTS.md  v4.1-ROADMAP.md  v5.0-MILESTONE-AUDIT.md  v5.0-REQUIREMENTS.md  (+1 more)
.planning/research/: ARCHITECTURE-COMPILE-DECORATOR.md  ARCHITECTURE-PIXEL-VIZ.md  ARCHITECTURE-PROFILER-OPTIMIZATION.md  ARCHITECTURE-TOFFOLI-ARITHMETIC.md  ARCHITECTURE.md  FEATURES-COMPILE-DECORATOR.md  FEATURES-PERFORMANCE.md  FEATURES-TOFFOLI-ARITHMETIC.md  FEATURES.md  PITFALLS-COMPILE-DECORATOR.md  PITFALLS-OPENQASM-EXPORT.md  PITFALLS-PERFORMANCE.md  PITFALLS-TOFFOLI-ARITHMETIC.md  PITFALLS.md  STACK-COMPILE-DECORATOR.md  STACK-PROFILING.md  STACK-TOFFOLI-ARITHMETIC.md  STACK.md  SUMMARY-COMPILE-DECORATOR.md  SUMMARY-TOFFOLI-ARITHMETIC.md  SUMMARY.md
Assembly/include/: AssemblyOperations.h  AssemblyReader.h
Assembly/src/: AssemblyArithmetic.c  AssemblyBasics.c  AssemblyComparison.c  AssemblyIntegerAddition.c  AssemblyIntegerDivision.c  AssemblyIntegerMultiplication.c  AssemblyLogic.c  AssemblyReader.c
Backend/include/: Integer.h  IntegerComparison.h  LogicOperations.h  QPU.h  arithmetic_ops.h  circuit.h  circuit_output.h  circuit_stats.h  comparison_ops.h  definition.h  gate.h  qubit_allocator.h
Backend/src/: Integer.c  IntegerAddition.c  IntegerComparison.c  IntegerMultiplication.c  LogicOperations.c  QPU.c  circuit_allocations.c  circuit_optimizer.c  circuit_output.c  ciruict_outputs.c  gate.c
Execution/include/: execution.h
Execution/src/: execution.c  run_circuit.py
benchmark/: benchmark.c
benchmarks/results/: bench_raw_post63.json  benchmark_report.json  benchmark_report.md
c_backend/: .clang-tidy  suppressions.txt
c_backend/include/: Integer.h  IntegerComparison.h  LogicOperations.h  QPU.h  arithmetic_ops.h  bitwise_ops.h  circuit.h  circuit_optimizer.h  circuit_output.h  circuit_stats.h  comparison_ops.h  definition.h  execution.h  gate.h  hot_path_add.h  hot_path_mul.h  hot_path_xor.h  module_deps.md  old_div  optimizer.h  qubit_allocator.h  toffoli_addition_internal.h  toffoli_arithmetic_ops.h  types.h  validation.h
c_backend/src/: Integer.c  IntegerAddition.c  IntegerComparison.c  IntegerMultiplication.c  LogicOperations.c  QPU.c  ToffoliAddition.c  ToffoliAdditionCDKM.c  ToffoliAdditionCLA.c  ToffoliAdditionHelpers.c  ToffoliDivision.c  ToffoliModReduce.c  ToffoliMultiplication.c  circuit_allocations.c  circuit_optimizer.c  circuit_output.c  circuit_stats.c  execution.c  gate.c  hot_path_add.c  hot_path_add_toffoli.c  hot_path_mul.c  hot_path_xor.c  optimizer.c  qubit_allocator.c
circuit-gen-results/: plot.py  results.csv  run.py  run_quil.py
circuit-gen-results/AriaQuanta/: run_aria.py
circuit-gen-results/amazon-braket/: run_braket.py
circuit-gen-results/cirq/: run_cirq.py
circuit-gen-results/ket/: run_ket.py
circuit-gen-results/pennylane/: run_penny.py
circuit-gen-results/projectQ/: run_projectQ.py
circuit-gen-results/pytket/: run_pytket.py
circuit-gen-results/qiskit/: run_qiskit.py
circuit-gen-results/qrisp/: run_qrisp.py
circuit-gen-results/qsharp/: Program.cs  QuantumProject.csproj
circuit-gen-results/quipper/: qft.hi  qft.hs
docs/: IMPLEMENTATION_PLAN.md  PRD.md  SPECS.md  optimizer_benchmark_results.md
examples/: chess_engine.py  sat_detection_demo.py
include/: AssemblyOperations.h  AssemblyReader.h  Integer.h  LogicOperations.h  QPU.h  definition.h  gate.h
python-backend/: build_preprocessor.py  circuit_class.pxi  qint_arithmetic.pxi  qint_operations.pxi  quantum_language.pxd  quantum_language.pyx  setup.py  test.py
scripts/: benchmark_compare.py  benchmark_eval.py  generate_seq_1_4.py  generate_seq_5_8.py  generate_seq_all.py  generate_toffoli_clifft_cla.py  generate_toffoli_decomp_seq.py  generate_toffoli_seq.py  record_baseline.py  verify_circuit.py
src/: AssemblyOperations.c  AssemblyReader.c  Integer.c  IntegerAddition.c  IntegerComparison.c  IntegerMultiplication.c  LogicOperations.c  QPU.c  chess_comparison.py  chess_encoding.py  chess_predicates.py  chess_walk.py  circuit.c  demo.py  gate.c  stack.c
src/quantum_language/: __init__.pxd  __init__.py  (+29 more)
tests/: conftest.py  plot.py  results.csv  run.py  run_qisk.py  test_add.py  test_array_verify.py  test_bitwise.py  test_bitwise_mixed.py  test_cla_addition.py  test_compare.py  test_compare_preservation.py  test_compile.py  test_conditionals.py  test_copy.py  test_copy_binops.py  test_cqq_add.py  test_div.py  test_draw_data.py  test_draw_render.py  test_hardcoded_sequences.py  test_mod.py  test_modular.py  test_mul.py  test_mul_addsub.py  test_qarray.py  test_qarray_elementwise.py  test_qarray_mutability.py  test_qarray_reductions.py  test_sub.py  test_toffoli_addition.py  test_toffoli_cq_reduction.py  test_toffoli_division.py  test_toffoli_hardcoded.py  test_toffoli_multiplication.py  test_uncomputation.py  verify_helpers.py  verify_init.py
(+937 files in other folders)
