[build-system]
requires = ["setuptools>=61.0", "wheel", "cython>=3.0.11,<4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum_language"
version = "0.1.0"
requires-python = ">=3.11"
description = "Quantum programming framework with natural programming style"
dependencies = [
    "numpy>=1.24",
    "Pillow>=9.0",
]

[project.optional-dependencies]
profiling = [
    "line-profiler>=5.0.0",
    "snakeviz>=2.2.2",
    "pytest-benchmark>=5.2.3",
    "memray>=1.19.1; sys_platform != 'win32'",
    "pytest-memray; sys_platform != 'win32'",
    "py-spy>=0.4.1; sys_platform != 'win32'",
    "scalene>=2.1.3; sys_platform != 'win32'",
]
verification = ["qiskit>=1.0", "qiskit-aer>=0.13"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=6.0",
    "pre-commit>=3.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E: pycodestyle errors
# F: pyflakes
# W: pycodestyle warnings
# I: isort (import sorting)
# B: bugbear (common bugs)
# C4: comprehensions
# UP: pyupgrade (modern Python idioms)
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = ["E501"]  # line length handled by line-length setting

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Respect magic trailing comma
skip-magic-trailing-comma = false
# Auto-detect line ending
line-ending = "auto"

[tool.coverage.run]
source = ["quantum_language"]
plugins = ["Cython.Coverage"]
omit = [
    "tests/*",
    "setup.py",
    "build_preprocessor.py",
    "*_preprocessed.pyx",
]

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = "reports/coverage/html"
title = "Quantum Language Coverage Report"
